5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4444/executions/1716_2497.log
== TEST (2019-05-09 16:38:45) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (teste>1):
	rend = saldo * juros
	saldo = saldo + rend
	t = ????

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
File "XXXX", line 17
    t = ????
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-10 17:22:38) 
-- CODE:
# O valor (em reais) inicialmente investido
valor = float(input("Quantia inicial: "))
qdtmeses= int(input("Tempo de investimento: "))
contador =1
while(contador <= qdtmeses):
	acres = valor * 0.04
	valor = saldo + acres
	contador = contador + 1
	print(valor)


	

-- EXECUTION TIME:
0.158388
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2497/main.py", line 7, in <module>
    valor = saldo + acres
NameError: name 'saldo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 17:23:31) 
-- CODE:

valor = float(input("Quantia inicial: "))
qdtmeses= int(input("Tempo de investimento: "))
contador =1
while(contador <= qdtmeses):
	acres = valor * 0.04
	valor = saldo + acres
	contador = contador + 1
	print(round(valor,2))


	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    valor = saldo + acres
NameError: name 'saldo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-10 17:23:36) 
-- CODE:

valor = float(input("Quantia inicial: "))
qdtmeses= int(input("Tempo de investimento: "))
contador =1
while(contador <= qdtmeses):
	acres = valor * 0.04
	valor = saldo + acres
	contador = contador + 1
	print(round(valor,2))


	

-- EXECUTION TIME:
0.275167
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2497/main.py", line 7, in <module>
    valor = saldo + acres
NameError: name 'saldo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 17:24:22) 
-- CODE:

valor = float(input("Quantia inicial: "))
qdtmeses= int(input("Tempo de investimento: "))
contador =1
while(contador <= qdtmeses):
	acres = valor * 0.04
	valor = saldo + acres
	contador = contador + 1
	print(round(valor,2))


	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    valor = saldo + acres
NameError: name 'saldo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 17:24:38) 
-- CODE:

valor = float(input("Quantia inicial: "))
qdtmeses= int(input("Tempo de investimento: "))
contador =1
while(contador <= qdtmeses):
	acres = valor * 0.04
	valor = valor + acres
	contador = contador + 1
	print(round(valor,2))


	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 17:25:19) 
-- CODE:

valor = float(input("Quantia inicial: "))
qdtmeses= int(input("Tempo de investimento: "))
contador =1
while(contador <= qdtmeses):
	acres = valor * 0.04
	valor = valor + acres
	contador = contador + 1
	print(round(valor,2))


	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-10 17:25:25) 
-- CODE:

valor = float(input("Quantia inicial: "))
qdtmeses= int(input("Tempo de investimento: "))
contador =1
while(contador <= qdtmeses):
	acres = valor * 0.04
	valor = valor + acres
	contador = contador + 1
	print(round(valor,2))


	

-- EXECUTION TIME:
0.152688
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
598.26
622.19
647.08
672.96
699.88
727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
858.42
892.75
928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1326.68
1379.74
1434.93
1492.33
1552.02
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:02:00) 
-- CODE:
vo = float(input("Quantia inicial: "))
qdtmeses= int(input("Tempo de investimento: "))
contador =1
while(contador <= qdtmeses):
	acres = vo * 0.04
	vo = vo + acres
	contador = contador + 1
	print(round(vo,2))


	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 19:02:29) 
-- CODE:
vo = float(input("Quantia inicial: "))
qdtmeses= int(input("Tempo de investimento: "))
contador =1
while(contador <= qdtmeses):
	acres = vo * 0.04
	vo = vo + acres
	contador = contador + 1
	print(round(vo,2))


	

-- EXECUTION TIME:
0.0972271
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
598.26
622.19
647.08
672.96
699.88
727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
858.42
892.75
928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1326.68
1379.74
1434.93
1492.33
1552.02
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 19:05:07) 
-- CODE:
vo = float(input("Quantia inicial: "))
qdtmeses= int(input("Tempo de investimento: "))
contador = 1 #variaval contadora registra os meses transcorridos
while(contador <= qdtmeses):
	acres = vo * 0.04
	vo = vo + acres
	contador = contador + 1
	print(round(vo,2))


	

-- EXECUTION TIME:
0.17939
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
598.26
622.19
647.08
672.96
699.88
727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
858.42
892.75
928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1326.68
1379.74
1434.93
1492.33
1552.02
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:05:09) 
-- CODE:
vo = float(input("Quantia inicial: "))
qdtmeses= int(input("Tempo de investimento: "))
contador = 1 #variaval contadora registra os meses transcorridos
while(contador <= qdtmeses):
	acres = vo * 0.04
	vo = vo + acres
	contador = contador + 1
	print(round(vo,2))


	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 19:05:12) 
-- CODE:
vo = float(input("Quantia inicial: "))
qdtmeses= int(input("Tempo de investimento: "))
contador = 1 #variaval contadora registra os meses transcorridos
while(contador <= qdtmeses):
	acres = vo * 0.04
	vo = vo + acres
	contador = contador + 1
	print(round(vo,2))


	

-- EXECUTION TIME:
0.23944
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
598.26
622.19
647.08
672.96
699.88
727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
858.42
892.75
928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1326.68
1379.74
1434.93
1492.33
1552.02
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 19:05:13) 
-- CODE:
vo = float(input("Quantia inicial: "))
qdtmeses= int(input("Tempo de investimento: "))
contador = 1 #variaval contadora registra os meses transcorridos
while(contador <= qdtmeses):
	acres = vo * 0.04
	vo = vo + acres
	contador = contador + 1
	print(round(vo,2))


	

-- EXECUTION TIME:
0.140462
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
598.26
622.19
647.08
672.96
699.88
727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
858.42
892.75
928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1326.68
1379.74
1434.93
1492.33
1552.02
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:05:13) 
-- CODE:
vo = float(input("Quantia inicial: "))
qdtmeses= int(input("Tempo de investimento: "))
contador = 1 #variaval contadora registra os meses transcorridos
while(contador <= qdtmeses):
	acres = vo * 0.04
	vo = vo + acres
	contador = contador + 1
	print(round(vo,2))


	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:08:49) 
-- CODE:
vo = float(input("Quantia inicial: "))
qdtmeses= int(input("Tempo de investimento: "))
contador = 1 #variaval contadora registra os meses transcorridos
while(contador <= qdtmeses):
	acres = vo * 0.04
	vo = vo + acres
	contador = contador + 1
	print(round(vo,2))


	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:08:50) 
-- CODE:
vo = float(input("Quantia inicial: "))
qdtmeses= int(input("Tempo de investimento: "))
contador = 1 #variaval contadora registra os meses transcorridos
while(contador <= qdtmeses):
	acres = vo * 0.04
	vo = vo + acres
	contador = contador + 1
	print(round(vo,2))


	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 19:08:52) 
-- CODE:
vo = float(input("Quantia inicial: "))
qdtmeses= int(input("Tempo de investimento: "))
contador = 1 #variaval contadora registra os meses transcorridos
while(contador <= qdtmeses):
	acres = vo * 0.04
	vo = vo + acres
	contador = contador + 1
	print(round(vo,2))


	

-- EXECUTION TIME:
0.136765
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
598.26
622.19
647.08
672.96
699.88
727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
858.42
892.75
928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1326.68
1379.74
1434.93
1492.33
1552.02
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
